--- a/index.html
+++ b/index.html
@@ -27,12 +27,11 @@
               height="50px"
             />
           </a>
-          
         </div>
       </nav>
 
       <span id="splash-overlay" class="splash"></span>
-          <span id="welcome" class="z-depth-4"></span>
+      <span id="welcome" class="z-depth-4"></span>
 
       <div class="container-fluid">
         <div class="row mt-5">
@@ -68,9 +67,17 @@
       <div class="container-fluid">
         <div class="d-grid gap-2 col-6 mx-auto pb-5">
           <h1 class="center-text text-dark">LIKE WHAT YOU HEAR?</h1>
-          <button type="button" class="btn btn-lg btn-dark mb-5" href="https://pay.strikepay.co/tags/rdRVg4tamcbdcSFW5KrI">
+          <!-- <button type="button" class="btn btn-lg btn-dark mb-5" href="https://pay.strikepay.co/tags/rdRVg4tamcbdcSFW5KrI">
             LEAVE A TIP HERE
-          </button>
+          </button> -->
+
+          <a
+            href="https://pay.strikepay.co/tags/rdRVg4tamcbdcSFW5KrI"
+            class="btn btn-lg btn-dark mb-5"
+            role="button"
+          >
+            LEAVE A TIP HERE
+          </a>
         </div>
       </div>
 
